--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class="subtitle"> Pick a number between 1 to 10</p>
             <div id="game">
                 <input type="number" id="guess" min="1" max="10" placeholder="Enter Number"/>
-                <button>Guess</button>
+                <button><onClick=checkGuess()></onClick></button>
                 <p id="message">Start guessing</p>
             </div>
         </div>
